# Haskell-exercises

./: .gitignore  A.hi  A.hs  lab.hs  pascall.hs
CIS194/exercises/week01-intro/: CHANGELOG.md  week01-intro.cabal
CIS194/exercises/week01-intro/src/: Homework01.hs  Main.hs
CIS194/exercises/week02-algebrDataTypes/src/: Homework02.hs  LogAnalysis.hs
CIS194/exercises/week03-recur_polym_Prelude/src/: Golf.hs
CIS194/exercises/week04-higherOrder_typeInf/src/: Homework04.hs
CIS194/exercises/week05-polym_typeInf/src/: Calc.hs
CIS194/exercises/week06-lazyEval/src/: Fibonacci.hs  Lecture.hs
CIS194/exercises/week07-folds_monoids/src/: Editor.hs  JoinList.hs  Lecture.hs  Scrabble.hs  Sized.hs
CIS194/exercises/week08-IO/src/: Employee.hs  Party.hs
CIS194/exercises/week10-applicativeFunctors/src/: AParser.hs  Lecture.hs
CIS194/exercises/week11-applicativeFunctors/src/: SExpr.hs
CIS194/exercises/week12-monads/: week12-monads.cabal
CIS194/exercises/week12-monads/src/: Risk.hs  Scribbles.hs
CIS194/sandbox/matrix/: Matrix.hs
