cabal-version:      3.12
name:               week12-monads
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Leo
maintainer:         leonhard.doerflinger@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Risk
    other-modules:
        Scribbles
    other-extensions: GeneralizedNewtypeDeriving
    build-depends:
        base ^>=4.18.3.0,
        MonadRandom
    hs-source-dirs:   src
    default-language: Haskell2010
